@@ -1,0 +1,31 @@
+package Thruk::View::Excel;
+
+use strict;
+use warnings;
+
+use base qw/Catalyst::View::Excel::Template::Plus/;
+
+=head1 NAME
+
+Thruk::View::Excel - Excel::Plus View for Thruk
+
+=head1 SEE ALSO
+
+See L<Thruk>.
+
+=head1 DESCRIPTION
+
+Catalyst Catalyst::View::Excel::Template::Plus View.
+
+=head1 AUTHOR
+
+Sven Nierlein, 2010, <nierlein@cpan.org>
+
+=head1 LICENSE
+
+This module is free software; you can redistribute it and/or modify it under
+the same terms as Perl itself. See L<perlartistic>.
+
+=cut
+
+1;
