@@ -114,6 +114,11 @@ input.button_peerHID {
   opacity: 0.40; /* Opera */
 }
 
+.exportOptions {
+  text-align: right;
+  margin-right: 20px;
+}
+
 /* class to preload images */
 .hidepics {
   width:0px;
