@@ -1,0 +1,7 @@
+use strict;
+use warnings;
+use Test::More;
+
+BEGIN { use_ok 'Thruk::View::Excel' }
+
+done_testing();
